--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
         </ol>
         <li><a href="#literatur">Literatur</a></li>
         <li><a href="#links">Weblinks</a></li>
-        <li><a href="#nachweise">Einzelnachweise</a></li>
-        <li><a href="#danke">Danksagung!</a></li>
+        <li><a href="#center">Danksagung!</a></li>
         </ol>
     </div> 
         <br>
